- Website update :  * new skin WIP.

--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Movida VR Lab'</title>
+    <title>MOVIDA VR LAB</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,9 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
+    <script src="https://use.typekit.net/sxe1cnn.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -43,19 +45,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#">Movida VR Lab'</a>
+                <a class="navbar-brand topnav" href="#" style="font-size:200%;letter-spacing:5px;font-weight:300;"><font color="#747474">MOVIDA</font><font color="#2badff">VR</font><font color="#747474">LAB</font></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="font-size:130%;font-weight:300;">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#about">A propos</a>
+                        <a href="#about">A PROPOS</a>
                     </li>
                     <li>
-                        <a href="#services">Nos services</a>
+                        <a href="#services">NOS SERVICES</a>
                     </li>
                     <li>
-                        <a href="mailto:lydie@movida-mail.com">Contact</a>
+                        <a href="mailto:lydie@movida-mail.com">CONTACT</a>
                     </li>
                 </ul>
             </div>
@@ -67,29 +69,25 @@
 
     <!-- Header -->
     <a name="about"></a>
-    <div class="intro-header">
+    <div class="intro-header" style="height:60%;">
         <div class="container">
 
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="intro-message">
-                        <h1>Movida VR Lab'</h1>
-                        <h3>Réalité Virtuelle | Réalité Augmentée</h3>
-                        <hr class="intro-divider">
-                        <ul class="list-inline intro-social-buttons">
-                            <li>
-                                <a href="https://www.youtube.com/watch?v=GhIi0OA4upg&list=PLm0i4cqD5HaaE6apxDVnmUUKApKKb2w0X" class="btn btn-default btn-lg"><i class="fa fa-youtube fa-fw"></i> <span class="network-name">Youtube</span></a>
-                            </li>
-                            <li>
-                                <a href="https://www.github.com/movida-production" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                            </li>
-                            <li>
-                                <a href="https://www.harfang3d.com/" class="btn btn-default btn-lg"><i class="fa fa-battery fa-fw"></i> <span class="network-name">Harfang 3D</span></a>
-                            </li>
-                        </ul>
-                        <div style="margin:auto; max-width: 50%;">
-                        <h4><br>Forte d'une expérience de 10 ans dans la simulation 3D, Movida Production est dès aujourd'hui en mesure de livrer des projets utilisant la réalité virtuelle.</h4>
-                        </div>
+                    <div class="intro-message" style="padding-top:10%;padding-bottom:10%;">
+                        <h1 style="font-size:600%;letter-spacing:15px;font-weight:300;"><font color="#FFFFFF">MOVIDA</font><font color="#2badff"><font style="font-size:5%;"> </font>VR<font style="font-size:5%;"> </font></font><font color="#FFFFFF">LAB</font></h1>
+                        <h3 style="font-size:250%;letter-spacing:5px;font-weight:300;"><font color="#FFFFFF">RÉALITÉ</font> <font color="#2badff">VIRTUELLE</font> <font color="#FFFFFF">| RÉALITÉ</font> <font color="#2badff">AUGMENTÉE</font></h3>
+                        <div class="row" style="max-height: 100px; background-color: red;">
+                            <div class="col-sm-4">
+                                <a href="https://www.github.com/movida-production"><img src="img/icon-github.png" style="padding-right:15%;padding-left:15%; max-width: 100%; height: auto;"></a>
+                            </div>
+                            <div class="col-sm-4">
+                                <a href="https://www.youtube.com/watch?v=GhIi0OA4upg&list=PLm0i4cqD5HaaE6apxDVnmUUKApKKb2w0X"><img src="img/icon-youtube.png" style="padding-right:15%;padding-left:15%;"></a>
+                            </div>                            
+                            <div class="col-sm-4">
+                                <a href="https://www.harfang3d.com/"><img src="img/icon-harfang.png" style="padding-right:15%;padding-left:15%;"></a>
+                            </div>
+                    </div>
                     </div>
                 </div>
             </div>
@@ -110,7 +108,7 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">La VR comme outil évenementiel</h2>
+                    <h2 class="section-heading">LA VR COMME UN OUTIL ÉVENEMENTIEL</h2>
                     <p class="lead">Solution de VR (Réalité Virtuelle) clé en main créée pour l'un de nos clients, dans le but <a target="_blank" href="https://youtu.be/GhIi0OA4upg">de présenter des produits lors de salons professionnels.</a> Cette solution est constituée d'un stand facile à assembler et d’une application 3D temps-réel développée sur mesure.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
@@ -132,7 +130,7 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Merchandising augmenté<br>grâce à la VR</h2>
+                    <h2 class="section-heading">MERCHANDISING AUGMENTÉ GRÂCE À LA VR</h2>
                     <p class="lead">Grâce à une simulation VR d'un linéaire de supermarché, des études consommateurs peuvent être réalisées rapidement sur un grand nombre de références, avec une souplesse encore jamais atteinte.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
@@ -154,7 +152,7 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Le soft et le hard<br>dans une offre cohérente</h2>
+                    <h2 class="section-heading">LE SOFT ET LE HARD DANS UNE OFFRE COHÉRENTE</h2>
                     <p class="lead">Notre software VR est basé à 100% sur notre propre technologie, garantie de notre indépendance. Notre hardware est le fruit d'une experience de la simulation 3D en environnement institutionnel.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
@@ -174,19 +172,16 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-6">
-                    <h4>Notre demoreel, nos projets open-source, notre technologie :</h4>
-                </div>
-                <div class="col-lg-6">
-                    <ul class="list-inline banner-social-buttons">
+                <div class="col-lg-12">
+                    <ul class="list-inline intro-social-buttons" style="margin-top:10%; text-align:center;">
                         <li>
-                            <a href="https://www.youtube.com/watch?v=GhIi0OA4upg&list=PLm0i4cqD5HaaE6apxDVnmUUKApKKb2w0X" class="btn btn-default btn-lg"><i class="fa fa-youtube fa-fw"></i> <span class="network-name">Youtube</span></a>
+                            <a href="https://www.github.com/movida-production"><span class="network-name"><img src="img/icon-github.png" style="padding-right:15%;padding-left:15%;"></span></a>
                         </li>
                         <li>
-                            <a href="https://www.github.com/movida-production" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                        </li>
+                            <a href="https://www.youtube.com/watch?v=GhIi0OA4upg&list=PLm0i4cqD5HaaE6apxDVnmUUKApKKb2w0X"><span class="network-name"><img src="img/icon-youtube.png" style="padding-right:15%;padding-left:15%;"></span></a>
+                        </li>                            
                         <li>
-                            <a href="https://www.harfang3d.com/" class="btn btn-default btn-lg"><i class="fa fa-battery fa-fw"></i> <span class="network-name">Harfang 3D</span></a>
+                            <a href="https://www.harfang3d.com/"><span class="network-name"><img src="img/icon-harfang.png" style="padding-right:15%;padding-left:15%;"></span></a>
                         </li>
                     </ul>
                 </div>
