--- a/www/index.html
+++ b/www/index.html
@@ -69,28 +69,27 @@
 
     <!-- Header -->
     <a name="about"></a>
-    <div class="intro-header" style="height:60%;">
+    <div class="intro-header" style="min-height:60%;padding-top:10%;padding-bottom:10%">
         <div class="container">
-
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="intro-message" style="padding-top:10%;padding-bottom:10%;">
-                        <h1 style="font-size:600%;letter-spacing:15px;font-weight:300;"><font color="#FFFFFF">MOVIDA</font><font color="#2badff"><font style="font-size:5%;"> </font>VR<font style="font-size:5%;"> </font></font><font color="#FFFFFF">LAB</font></h1>
+                    
+                        <h1 style="font-size:600%;letter-spacing:15px;font-weight:300; word-break: break-all;"><font color="#FFFFFF">MOVIDA</font><font color="#2badff"><font style="font-size:5%;"> </font>VR<font style="font-size:5%;"> </font></font><font color="#FFFFFF">LAB</font></h1>
                         <h3 style="font-size:250%;letter-spacing:5px;font-weight:300;"><font color="#FFFFFF">RÉALITÉ</font> <font color="#2badff">VIRTUELLE</font> <font color="#FFFFFF">| RÉALITÉ</font> <font color="#2badff">AUGMENTÉE</font></h3>
-                        <div class="row" style="max-height: 100px; background-color: red;">
-                            <div class="col-sm-4">
-                                <a href="https://www.github.com/movida-production"><img src="img/icon-github.png" style="padding-right:15%;padding-left:15%; max-width: 100%; height: auto;"></a>
-                            </div>
-                            <div class="col-sm-4">
-                                <a href="https://www.youtube.com/watch?v=GhIi0OA4upg&list=PLm0i4cqD5HaaE6apxDVnmUUKApKKb2w0X"><img src="img/icon-youtube.png" style="padding-right:15%;padding-left:15%;"></a>
-                            </div>                            
-                            <div class="col-sm-4">
-                                <a href="https://www.harfang3d.com/"><img src="img/icon-harfang.png" style="padding-right:15%;padding-left:15%;"></a>
-                            </div>
-                    </div>
-                    </div>
+                    
                 </div>
             </div>
+			<div class="row">
+				<div class="col-xs-4">
+					<a href="https://www.github.com/movida-production"><img src="img/icon-github.png" class="img-responsive center-block"></a>
+				</div>
+				<div class="col-xs-4">
+					<a href="https://www.youtube.com/watch?v=GhIi0OA4upg&list=PLm0i4cqD5HaaE6apxDVnmUUKApKKb2w0X"><img src="img/icon-youtube.png" class="img-responsive center-block"></a>
+				</div>                            
+				<div class="col-xs-4">
+					<a href="https://www.harfang3d.com/"><img src="img/icon-harfang.png" class="img-responsive center-block"></a>
+				</div>
+			</div>
 
         </div>
         <!-- /.container -->
