- Website update :  * new skin almost done.

--- a/www/index.html
+++ b/www/index.html
@@ -69,24 +69,24 @@
 
     <!-- Header -->
     <a name="about"></a>
-    <div class="intro-header" style="min-height:60%;padding-top:10%;padding-bottom:10%">
+    <div class="intro-header" style="min-height:60%;padding-top:12.5%;padding-bottom:10%">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     
-                        <h1 style="font-size:600%;letter-spacing:15px;font-weight:300; word-break: break-all;"><font color="#FFFFFF">MOVIDA</font><font color="#2badff"><font style="font-size:5%;"> </font>VR<font style="font-size:5%;"> </font></font><font color="#FFFFFF">LAB</font></h1>
+                        <h1 style="font-size:600%;letter-spacing:15px;font-weight:300;"><font color="#FFFFFF">MOVIDA</font><font color="#2badff"><font style="font-size:5%;"> </font>VR<font style="font-size:5%;"> </font></font><font color="#FFFFFF">LAB</font></h1>
                         <h3 style="font-size:250%;letter-spacing:5px;font-weight:300;"><font color="#FFFFFF">RÉALITÉ</font> <font color="#2badff">VIRTUELLE</font> <font color="#FFFFFF">| RÉALITÉ</font> <font color="#2badff">AUGMENTÉE</font></h3>
                     
                 </div>
             </div>
-			<div class="row">
-				<div class="col-xs-4">
+			<div class="row" style="margin-top: 5%;">
+				<div class="col-xs-2 col-xs-offset-3">
 					<a href="https://www.github.com/movida-production"><img src="img/icon-github.png" class="img-responsive center-block"></a>
 				</div>
-				<div class="col-xs-4">
+				<div class="col-xs-2">
 					<a href="https://www.youtube.com/watch?v=GhIi0OA4upg&list=PLm0i4cqD5HaaE6apxDVnmUUKApKKb2w0X"><img src="img/icon-youtube.png" class="img-responsive center-block"></a>
 				</div>                            
-				<div class="col-xs-4">
+				<div class="col-xs-2">
 					<a href="https://www.harfang3d.com/"><img src="img/icon-harfang.png" class="img-responsive center-block"></a>
 				</div>
 			</div>
@@ -98,8 +98,8 @@
     <!-- /.intro-header -->
 
     <!-- Page Content -->
-
 	<a  name="services"></a>
+<div class="wireframebg">
     <div class="content-section-a">
 
         <div class="container">
@@ -164,7 +164,6 @@
 
     </div>
     <!-- /.content-section-a -->
-
 	<a  name="contact"></a>
     <div class="banner">
 
@@ -172,15 +171,15 @@
 
             <div class="row">
                 <div class="col-lg-12">
-                    <ul class="list-inline intro-social-buttons" style="margin-top:10%; text-align:center;">
+                    <ul class="list-inline intro-social-buttons" style="margin:-5%; text-align:center;">
                         <li>
-                            <a href="https://www.github.com/movida-production"><span class="network-name"><img src="img/icon-github.png" style="padding-right:15%;padding-left:15%;"></span></a>
+                            <a href="https://www.github.com/movida-production"><span class="network-name"><img src="img/icon-github-color.png" style="padding-right:15%;padding-left:15%;"></span></a>
                         </li>
                         <li>
-                            <a href="https://www.youtube.com/watch?v=GhIi0OA4upg&list=PLm0i4cqD5HaaE6apxDVnmUUKApKKb2w0X"><span class="network-name"><img src="img/icon-youtube.png" style="padding-right:15%;padding-left:15%;"></span></a>
+                            <a href="https://www.youtube.com/watch?v=GhIi0OA4upg&list=PLm0i4cqD5HaaE6apxDVnmUUKApKKb2w0X"><span class="network-name"><img src="img/icon-youtube-color.png" style="padding-right:15%;padding-left:15%;"></span></a>
                         </li>                            
                         <li>
-                            <a href="https://www.harfang3d.com/"><span class="network-name"><img src="img/icon-harfang.png" style="padding-right:15%;padding-left:15%;"></span></a>
+                            <a href="https://www.harfang3d.com/"><span class="network-name"><img src="img/icon-harfang-large.png" style="padding-right:15%;padding-left:15%;"></span></a>
                         </li>
                     </ul>
                 </div>
@@ -191,30 +190,31 @@
 
     </div>
     <!-- /.banner -->
+</div>
 
     <!-- Footer -->
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <ul class="list-inline">
+                    <ul class="list-inline" style="text-align:center; font-size:150%; font-weight:300;">
                         <li>
-                            <a href="#">Accueil</a>
+                            <a href="#">ACCUEIL</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#about">A propos</a>
+                            <a href="#about">A PROPOS</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#services">Nos services</a>
+                            <a href="#services">NOS SERVICES</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="mailto:lydie@movida-mail.com">Contact</a>
+                            <a href="mailto:lydie@movida-mail.com">CONTACT</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Movida Production 2017.</p>
+                    <p class="copyright text-muted small" style="text-align:center; font-size:150%; font-weight:300;">Copyright &copy; Movida Production 2017.</p>
                 </div>
             </div>
         </div>
