--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,28 +11,26 @@
     <title>MOVIDA VR LAB</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="public/vr/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/landing-page.css" rel="stylesheet">
+    <link href="public/vr/css/landing-page.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="public/vr/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
     <script src="https://use.typekit.net/sxe1cnn.js"></script>
-<script>try{Typekit.load({ async: true });}catch(e){}</script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
 </head>
 
 <body>
-
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
         <div class="container topnav">
@@ -73,24 +70,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    
-                        <h1 style="font-size:600%;letter-spacing:15px;font-weight:300;"><font color="#FFFFFF">MOVIDA</font><font color="#2badff"><font style="font-size:5%;"> </font>VR<font style="font-size:5%;"> </font></font><font color="#FFFFFF">LAB</font></h1>
-                        <h3 style="font-size:250%;letter-spacing:5px;font-weight:300;"><font color="#FFFFFF">RÉALITÉ</font> <font color="#2badff">VIRTUELLE</font> <font color="#FFFFFF">| RÉALITÉ</font> <font color="#2badff">AUGMENTÉE</font></h3>
-                    
+                    <h1 style="font-size:600%;letter-spacing:15px;font-weight:300;"><font color="#FFFFFF">MOVIDA</font><font color="#2badff"><font style="font-size:5%;"> </font>VR<font style="font-size:5%;"> </font></font><font color="#FFFFFF">LAB</font></h1>
+                    <h3 style="font-size:250%;letter-spacing:5px;font-weight:300;"><font color="#FFFFFF">RÉALITÉ</font> <font color="#2badff">VIRTUELLE</font> <font color="#FFFFFF">| RÉALITÉ</font> <font color="#2badff">AUGMENTÉE</font></h3>
                 </div>
             </div>
-			<div class="row" style="margin-top: 5%;">
-				<div class="col-xs-2 col-xs-offset-3">
-					<a href="https://www.github.com/movida-production"><img src="img/icon-github.png" class="img-responsive center-block"></a>
-				</div>
-				<div class="col-xs-2">
-					<a href="https://www.youtube.com/watch?v=GhIi0OA4upg&list=PLm0i4cqD5HaaE6apxDVnmUUKApKKb2w0X"><img src="img/icon-youtube.png" class="img-responsive center-block"></a>
-				</div>                            
-				<div class="col-xs-2">
-					<a href="https://www.harfang3d.com/"><img src="img/icon-harfang.png" class="img-responsive center-block"></a>
-				</div>
-			</div>
-
+            <div class="row" style="margin-top: 5%;">
+                <div class="col-xs-2 col-xs-offset-3">
+                    <a href="https://www.github.com/movida-production"><img src="public/vr/img/icon-github.png" class="img-responsive center-block"></a>
+                </div>
+                <div class="col-xs-2">
+                    <a href="https://www.youtube.com/watch?v=GhIi0OA4upg&list=PLm0i4cqD5HaaE6apxDVnmUUKApKKb2w0X"><img src="public/vr/img/icon-youtube.png" class="img-responsive center-block"></a>
+                </div>                            
+                <div class="col-xs-2">
+                    <a href="https://www.harfang3d.com/"><img src="public/vr/img/icon-harfang.png" class="img-responsive center-block"></a>
+                </div>
+            </div>
         </div>
         <!-- /.container -->
 
@@ -99,98 +93,98 @@
 
     <!-- Page Content -->
 	<a  name="services"></a>
-<div class="wireframebg">
-    <div class="content-section-a">
+        <div class="wireframebg">
+            <div class="content-section-a">
 
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">LA VR COMME UN OUTIL ÉVENEMENTIEL</h2>
-                    <p class="lead">Solution de VR (Réalité Virtuelle) clé en main créée pour l'un de nos clients, dans le but <a target="_blank" href="https://youtu.be/GhIi0OA4upg">de présenter des produits lors de salons professionnels.</a> Cette solution est constituée d'un stand facile à assembler et d’une application 3D temps-réel développée sur mesure.</p>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-5 col-sm-6">
+                            <hr class="section-heading-spacer">
+                            <div class="clearfix"></div>
+                            <h2 class="section-heading">LA VR COMME UN OUTIL ÉVENEMENTIEL</h2>
+                            <p class="lead">Solution de VR (Réalité Virtuelle) clé en main créée pour l'un de nos clients, dans le but <a target="_blank" href="https://youtu.be/GhIi0OA4upg">de présenter des produits lors de salons professionnels.</a> Cette solution est constituée d'un stand facile à assembler et d’une application 3D temps-réel développée sur mesure.</p>
+                        </div>
+                        <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                            <a target="_blank" href="https://youtu.be/GhIi0OA4upg"><img class="img-responsive" src="public/vr/img/vr-01.jpg" alt="Réalité Virtuelle en evenementiel"></a>
+                        </div>
+                    </div>
+
                 </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <a target="_blank" href="https://youtu.be/GhIi0OA4upg"><img class="img-responsive" src="img/vr-01.jpg" alt="Réalité Virtuelle en evenementiel"></a>
-                </div>
+                <!-- /.container -->
+
             </div>
+            <!-- /.content-section-a -->
 
-        </div>
-        <!-- /.container -->
+            <div class="content-section-b">
 
-    </div>
-    <!-- /.content-section-a -->
+                <div class="container">
 
-    <div class="content-section-b">
+                    <div class="row">
+                        <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                            <hr class="section-heading-spacer">
+                            <div class="clearfix"></div>
+                            <h2 class="section-heading">MERCHANDISING AUGMENTÉ GRÂCE À LA VR</h2>
+                            <p class="lead">Grâce à une simulation VR d'un linéaire de supermarché, des études consommateurs peuvent être réalisées rapidement sur un grand nombre de références, avec une souplesse encore jamais atteinte.</p>
+                        </div>
+                        <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                            <img class="img-responsive" src="public/vr/img/vr-02.jpg" alt="">
+                        </div>
+                    </div>
 
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">MERCHANDISING AUGMENTÉ GRÂCE À LA VR</h2>
-                    <p class="lead">Grâce à une simulation VR d'un linéaire de supermarché, des études consommateurs peuvent être réalisées rapidement sur un grand nombre de références, avec une souplesse encore jamais atteinte.</p>
                 </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/vr-02.jpg" alt="">
-                </div>
+                <!-- /.container -->
+
             </div>
+            <!-- /.content-section-b -->
 
-        </div>
-        <!-- /.container -->
+            <div class="content-section-a">
 
-    </div>
-    <!-- /.content-section-b -->
+                <div class="container">
 
-    <div class="content-section-a">
+                    <div class="row">
+                        <div class="col-lg-5 col-sm-6">
+                            <hr class="section-heading-spacer">
+                            <div class="clearfix"></div>
+                            <h2 class="section-heading">LE SOFT ET LE HARD DANS UNE OFFRE COHÉRENTE</h2>
+                            <p class="lead">Notre software VR est basé à 100% sur notre propre technologie, garantie de notre indépendance. Notre hardware est le fruit d'une experience de la simulation 3D en environnement institutionnel.</p>
+                        </div>
+                        <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                            <img class="img-responsive" src="public/vr/img/vr-03.jpg" alt="">
+                        </div>
+                    </div>
 
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">LE SOFT ET LE HARD DANS UNE OFFRE COHÉRENTE</h2>
-                    <p class="lead">Notre software VR est basé à 100% sur notre propre technologie, garantie de notre indépendance. Notre hardware est le fruit d'une experience de la simulation 3D en environnement institutionnel.</p>
                 </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/vr-03.jpg" alt="">
-                </div>
+                <!-- /.container -->
+
             </div>
+            <!-- /.content-section-a -->
+                <a  name="contact"></a>
+            <div class="banner">
 
-        </div>
-        <!-- /.container -->
+                <div class="container">
 
-    </div>
-    <!-- /.content-section-a -->
-	<a  name="contact"></a>
-    <div class="banner">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <ul class="list-inline intro-social-buttons" style="margin:-5%; text-align:center;">
+                                <li>
+                                    <a href="https://www.github.com/movida-production"><span class="network-name"><img src="public/vr/img/icon-github-color.png" style="padding-right:15%;padding-left:15%;"></span></a>
+                                </li>
+                                <li>
+                                    <a href="https://www.youtube.com/watch?v=GhIi0OA4upg&list=PLm0i4cqD5HaaE6apxDVnmUUKApKKb2w0X"><span class="network-name"><img src="public/vr/img/icon-youtube-color.png" style="padding-right:15%;padding-left:15%;"></span></a>
+                                </li>                            
+                                <li>
+                                    <a href="https://www.harfang3d.com/"><span class="network-name"><img src="public/vr/img/icon-harfang-large.png" style="padding-right:15%;padding-left:15%;"></span></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
 
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="list-inline intro-social-buttons" style="margin:-5%; text-align:center;">
-                        <li>
-                            <a href="https://www.github.com/movida-production"><span class="network-name"><img src="img/icon-github-color.png" style="padding-right:15%;padding-left:15%;"></span></a>
-                        </li>
-                        <li>
-                            <a href="https://www.youtube.com/watch?v=GhIi0OA4upg&list=PLm0i4cqD5HaaE6apxDVnmUUKApKKb2w0X"><span class="network-name"><img src="img/icon-youtube-color.png" style="padding-right:15%;padding-left:15%;"></span></a>
-                        </li>                            
-                        <li>
-                            <a href="https://www.harfang3d.com/"><span class="network-name"><img src="img/icon-harfang-large.png" style="padding-right:15%;padding-left:15%;"></span></a>
-                        </li>
-                    </ul>
                 </div>
+                <!-- /.container -->
+
             </div>
-
+            <!-- /.banner -->
         </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.banner -->
-</div>
 
     <!-- Footer -->
     <footer>
@@ -221,10 +215,10 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="public/vr/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="public/vr/js/bootstrap.min.js"></script>
 
 </body>
 
