--- a/www/index.html
+++ b/www/index.html
@@ -1,101 +1,90 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+        <title>MOVIDA VR LAB</title>
 
-    <title>MOVIDA VR LAB</title>
+        <!-- Bootstrap Core CSS -->
+        <link href="public/vr/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Bootstrap Core CSS -->
-    <link href="public/vr/css/bootstrap.min.css" rel="stylesheet">
+        <!-- Custom CSS -->
+        <link href="public/vr/css/landing-page.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
-    <link href="public/vr/css/landing-page.css" rel="stylesheet">
+        <!-- Custom Fonts -->
+        <link href="public/vr/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
+        <script src="https://use.typekit.net/sxe1cnn.js"></script>
+        <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
-    <!-- Custom Fonts -->
-    <link href="public/vr/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
-    <script src="https://use.typekit.net/sxe1cnn.js"></script>
-    <script>try{Typekit.load({ async: true });}catch(e){}</script>
-
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->
-</head>
-
-<body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
-        <div class="container topnav">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand topnav" href="#" style="font-size:200%;letter-spacing:5px;font-weight:300;"><font color="#747474">MOVIDA</font><font color="#2badff">VR</font><font color="#747474">LAB</font></a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="font-size:130%;font-weight:300;">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#about">A PROPOS</a>
-                    </li>
-                    <li>
-                        <a href="#services">NOS SERVICES</a>
-                    </li>
-                    <li>
-                        <a href="mailto:lydie@movida-mail.com">CONTACT</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-
-
-    <!-- Header -->
-    <a name="about"></a>
-    <div class="intro-header" style="min-height:60%;padding-top:12.5%;padding-bottom:10%">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1 style="font-size:600%;letter-spacing:15px;font-weight:300;"><font color="#FFFFFF">MOVIDA</font><font color="#2badff"><font style="font-size:5%;"> </font>VR<font style="font-size:5%;"> </font></font><font color="#FFFFFF">LAB</font></h1>
-                    <h3 style="font-size:250%;letter-spacing:5px;font-weight:300;"><font color="#FFFFFF">RÉALITÉ</font> <font color="#2badff">VIRTUELLE</font> <font color="#FFFFFF">| RÉALITÉ</font> <font color="#2badff">AUGMENTÉE</font></h3>
+            <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+            <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+            <!--[if lt IE 9]>
+                <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+                <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+            <![endif]-->
+    </head>
+    <body>
+        <!-- Navigation -->
+        <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+            <div class="container topnav">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand topnav" href="#"><span class="greynav">MOVIDA</span><span class="bluenav">VR</span><span class="greynav">LAB</span></a>
+                </div>
+                <div class="collapse navbar-collapse rightnav" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="#about">A PROPOS</a>
+                        </li>
+                        <li>
+                            <a href="#services">NOS SERVICES</a>
+                        </li>
+                        <li>
+                            <a href="mailto:lydie@movida-mail.com">CONTACT</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-            <div class="row" style="margin-top: 5%;">
-                <div class="col-xs-2 col-xs-offset-3">
-                    <a href="https://www.github.com/movida-production"><img src="public/vr/img/icon-github.png" class="img-responsive center-block"></a>
+        </nav>
+
+        <!-- Header -->
+        <a name="about"></a>
+        <div class="intro-header">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h1>MOVIDA<span class="fs5"> </span><span class="bluenav ">VR</span><span class="fs5"> </span>LAB</h1>
+                        <h3>RÉALITÉ <span class="bluenav">VIRTUELLE</span> | RÉALITÉ <span class="bluenav">AUGMENTÉE</span></h3>
+                    </div>
                 </div>
-                <div class="col-xs-2">
-                    <a href="https://www.youtube.com/watch?v=GhIi0OA4upg&list=PLm0i4cqD5HaaE6apxDVnmUUKApKKb2w0X"><img src="public/vr/img/icon-youtube.png" class="img-responsive center-block"></a>
-                </div>                            
-                <div class="col-xs-2">
-                    <a href="https://www.harfang3d.com/"><img src="public/vr/img/icon-harfang.png" class="img-responsive center-block"></a>
+                <div class="row header-links">
+                    <div class="col-xs-2 col-xs-offset-3">
+                        <a href="https://www.github.com/movida-production"><img src="public/vr/img/icon-github.png" class="img-responsive center-block"></a>
+                    </div>
+                    <div class="col-xs-2">
+                        <a href="https://www.youtube.com/watch?v=GhIi0OA4upg&list=PLm0i4cqD5HaaE6apxDVnmUUKApKKb2w0X"><img src="public/vr/img/icon-youtube.png" class="img-responsive center-block"></a>
+                    </div>                            
+                    <div class="col-xs-2">
+                        <a href="https://www.harfang3d.com/"><img src="public/vr/img/icon-harfang.png" class="img-responsive center-block"></a>
+                    </div>
                 </div>
             </div>
         </div>
-        <!-- /.container -->
 
-    </div>
-    <!-- /.intro-header -->
-
-    <!-- Page Content -->
-	<a  name="services"></a>
+        <!-- Page Content -->
+        <a  name="services"></a>
         <div class="wireframebg">
             <div class="content-section-a">
-
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-5 col-sm-6">
@@ -108,17 +97,10 @@
                             <a target="_blank" href="https://youtu.be/GhIi0OA4upg"><img class="img-responsive" src="public/vr/img/vr-01.jpg" alt="Réalité Virtuelle en evenementiel"></a>
                         </div>
                     </div>
-
                 </div>
-                <!-- /.container -->
-
             </div>
-            <!-- /.content-section-a -->
-
             <div class="content-section-b">
-
                 <div class="container">
-
                     <div class="row">
                         <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                             <hr class="section-heading-spacer">
@@ -130,17 +112,10 @@
                             <img class="img-responsive" src="public/vr/img/vr-02.jpg" alt="">
                         </div>
                     </div>
-
                 </div>
-                <!-- /.container -->
-
             </div>
-            <!-- /.content-section-b -->
-
             <div class="content-section-a">
-
                 <div class="container">
-
                     <div class="row">
                         <div class="col-lg-5 col-sm-6">
                             <hr class="section-heading-spacer">
@@ -152,74 +127,60 @@
                             <img class="img-responsive" src="public/vr/img/vr-03.jpg" alt="">
                         </div>
                     </div>
-
                 </div>
-                <!-- /.container -->
-
             </div>
-            <!-- /.content-section-a -->
-                <a  name="contact"></a>
+
+            <a  name="contact"></a>
             <div class="banner">
-
                 <div class="container">
-
                     <div class="row">
                         <div class="col-lg-12">
-                            <ul class="list-inline intro-social-buttons" style="margin:-5%; text-align:center;">
+                            <ul class="list-inline banner-social-buttons">
                                 <li>
-                                    <a href="https://www.github.com/movida-production"><span class="network-name"><img src="public/vr/img/icon-github-color.png" style="padding-right:15%;padding-left:15%;"></span></a>
+                                    <a href="https://www.github.com/movida-production"><img src="public/vr/img/icon-github-color.png" class="banner-img"></a>
                                 </li>
                                 <li>
-                                    <a href="https://www.youtube.com/watch?v=GhIi0OA4upg&list=PLm0i4cqD5HaaE6apxDVnmUUKApKKb2w0X"><span class="network-name"><img src="public/vr/img/icon-youtube-color.png" style="padding-right:15%;padding-left:15%;"></span></a>
+                                    <a href="https://www.youtube.com/watch?v=GhIi0OA4upg&list=PLm0i4cqD5HaaE6apxDVnmUUKApKKb2w0X"><img src="public/vr/img/icon-youtube-color.png"  class="banner-img"></a>
                                 </li>                            
                                 <li>
-                                    <a href="https://www.harfang3d.com/"><span class="network-name"><img src="public/vr/img/icon-harfang-large.png" style="padding-right:15%;padding-left:15%;"></span></a>
+                                    <a href="https://www.harfang3d.com/"><img src="public/vr/img/icon-harfang-large.png"  class="banner-img"></a>
                                 </li>
                             </ul>
                         </div>
                     </div>
-
-                </div>
-                <!-- /.container -->
-
-            </div>
-            <!-- /.banner -->
-        </div>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="list-inline" style="text-align:center; font-size:150%; font-weight:300;">
-                        <li>
-                            <a href="#">ACCUEIL</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#about">A PROPOS</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#services">NOS SERVICES</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="mailto:lydie@movida-mail.com">CONTACT</a>
-                        </li>
-                    </ul>
-                    <p class="copyright text-muted small" style="text-align:center; font-size:150%; font-weight:300;">Copyright &copy; Movida Production 2017.</p>
                 </div>
             </div>
         </div>
-    </footer>
 
-    <!-- jQuery -->
-    <script src="public/vr/js/jquery.js"></script>
+        <!-- Footer -->
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <ul class="list-inline">
+                            <li>
+                                <a href="#">ACCUEIL</a>
+                            </li>
+                            <li>&sdot;</li>
+                            <li>
+                                <a href="#about">A PROPOS</a>
+                            </li>
+                            <li>&sdot;</li>
+                            <li>
+                                <a href="#services">NOS SERVICES</a>
+                            </li>
+                            <li>&sdot;</li>
+                            <li>
+                                <a href="mailto:lydie@movida-mail.com">CONTACT</a>
+                            </li>
+                        </ul>
+                        <p class="copyright text-muted small">Copyright &copy; Movida Production 2017.</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="public/vr/js/bootstrap.min.js"></script>
-
-</body>
-
+        <script src="public/vr/js/jquery.js"></script>
+        <script src="public/vr/js/bootstrap.min.js"></script>
+    </body>
 </html>
